# bookshelf

.github/workflows/: build_and_lint.yml  (+2 more)
server/: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
server/.github/workflows/: build_and_lint.yml
server/api/: Makefile  go.mod  go.sum
server/api/cmd/api/: main.go
server/api/internal/config/: apiconfig.go
server/api/internal/domains/auth/models/: dto.go
server/api/internal/domains/auth/repository/: dto.go  repository.go
server/api/internal/domains/auth/service/: service_test.go
server/api/internal/util/aes/: aes.go
server/cmd/: main.go
server/cmd/api/: main.go
server/docker/: api.Dockerfile  etl-batcher.Dockerfile  etl-worker.Dockerfile
server/etl/: Cargo.toml
server/etl/batcher/: Cargo.toml
server/etl/batcher/src/: main.rs
server/etl/worker/: Cargo.toml
server/internal/config/: config.go
server/internal/domains/auth/api/v1/: controller.go
server/internal/domains/auth/models/: dto.go
server/internal/domains/auth/repository/: dto.go  models.go  repository.go
server/internal/domains/auth/service/: error.go  service.go
server/internal/routing/: routing.go
server/internal/routing/middleware/auth/: auth.go  auth_test.go  keys.go
server/internal/shared/dto/pagination/: pagination.go  repository.go  service.go
server/internal/util/jwt/: jwt.go
server/migrations/: 20251221135531_add_user_and_session_table.sql  20251222210321_add_refresh_token_to_session.sql  20260115211416_add_openlibrary_tables.sql
server/src/: env_config.rs  error.rs  main.rs
(+2 files in other folders)
