[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
config = "0.15.19"
config-rs = "0.1.3"
sqlx = { version = "0.8.6", features = ["postgres", "mysql", "uuid", "chrono", "json", "macros", "migrate", "runtime-tokio-rustls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
